--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -74,9 +74,29 @@
             <DataTrigger Binding="{Binding ElementName=userList, Path=SelectedIndex}"
                                      Value="-1">
                 <Setter Property="Visibility" 
-                                    Value="Visible"/>
+                        Value="Visible"/>
             </DataTrigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="privateMessagesColumn" TargetType="{x:Type ColumnDefinition}">
+        <Setter Property="MinWidth" Value="1"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding ElementName=userList, Path=SelectedIndex}"
+                                     Value="-1">
+                <Setter Property="MinWidth" 
+                        Value="185"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="gridSpliiter" TargetType="{x:Type GridSplitter}">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="Width" Value="2"/>
+        <Setter Property="Background" Value="#9DA1A6"/>
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Panel.ZIndex" Value="2"/>
     </Style>
 
 </ResourceDictionary>
