--- a/ChatClient/Views/AdditionalViews/SettingsView.xaml
+++ b/ChatClient/Views/AdditionalViews/SettingsView.xaml
@@ -15,60 +15,65 @@
         <converters:ByteToImageConverter x:Key="byteToImageConverter"/>
     </UserControl.Resources>
     <Grid Name="fullCoveredGrid" >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.Background>
-            <SolidColorBrush Color="Black" Opacity="0.8"/>
-        </Grid.Background>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="350"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.Background>
+                <SolidColorBrush Color="Black" Opacity="0.8"/>
+            </Grid.Background>
 
-        <Grid Grid.Column="0" Background="Transparent">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDown">
-                    <i:InvokeCommandAction Command="{Binding OpenSettingsCommand}">
-                        <i:InvokeCommandAction.CommandParameter>
-                            <MultiBinding Converter ="{StaticResource multiBindingConverter}">
-                                <Binding Source="false"/>
-                            </MultiBinding>
-                        </i:InvokeCommandAction.CommandParameter>
-                    </i:InvokeCommandAction>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </Grid>
+            <Grid Grid.Column="0" Background="Transparent">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseDown">
+                        <i:InvokeCommandAction Command="{Binding OpenSettingsCommand}">
+                            <i:InvokeCommandAction.CommandParameter>
+                                <MultiBinding Converter ="{StaticResource multiBindingConverter}">
+                                    <Binding Source="false"/>
+                                </MultiBinding>
+                            </i:InvokeCommandAction.CommandParameter>
+                        </i:InvokeCommandAction>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Grid>
 
-        <Grid Grid.Column="2" Background="Transparent">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="MouseDown">
-                    <i:InvokeCommandAction Command="{Binding OpenSettingsCommand}">
-                        <i:InvokeCommandAction.CommandParameter>
-                            <MultiBinding Converter ="{StaticResource multiBindingConverter}">
-                                <Binding Source="false"/>
-                            </MultiBinding>
-                        </i:InvokeCommandAction.CommandParameter>
-                    </i:InvokeCommandAction>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </Grid>
+            <Grid Grid.Column="2" Background="Transparent">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseDown">
+                        <i:InvokeCommandAction Command="{Binding OpenSettingsCommand}">
+                            <i:InvokeCommandAction.CommandParameter>
+                                <MultiBinding Converter ="{StaticResource multiBindingConverter}">
+                                    <Binding Source="false"/>
+                                </MultiBinding>
+                            </i:InvokeCommandAction.CommandParameter>
+                        </i:InvokeCommandAction>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Grid>
 
-        <Grid Grid.Column ="1">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="1.3*"/>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" 
+            <Grid  VerticalAlignment="Center"
+                   Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="200"/>
+                    <RowDefinition Height="210"/>
+                </Grid.RowDefinitions>
+            <Border CornerRadius="10,10,0,0" 
+                BorderThickness="2,2,2,0" 
+                    Padding="2,2,2,0" 
+                BorderBrush="Gray">
+                <StackPanel Grid.Row="0" 
                     Background="{StaticResource mainMessageBoxColors}"
                     IsHitTestVisible="True">
-                <DockPanel Grid.Row="0" VerticalAlignment="Top">
-                    <TextBlock Text="Settings"
+                    <DockPanel Grid.Row="0" VerticalAlignment="Top">
+                        <TextBlock Text="Settings"
                        FontSize="28"
                        HorizontalAlignment="Left"
                        Margin="5,0,5,5"
                        FontWeight="DemiBold"
                            VerticalAlignment="Top"
                        DockPanel.Dock="Left"/>
-                    <Button DockPanel.Dock="Right"
+                        <Button DockPanel.Dock="Right"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         FontSize="20"
@@ -76,63 +81,68 @@
                         Height="25"
                         Margin="0,0,5,0"
                         Command="{Binding OpenSettingsCommand}">
-                        <Button.CommandParameter>
-                            <MultiBinding Converter ="{StaticResource multiBindingConverter}">
-                                <Binding Source="false"/>
-                            </MultiBinding>
-                        </Button.CommandParameter>
-                        <Image Source="{StaticResource closeTabDrawingImage}"/>
-                    </Button>
-                </DockPanel>
-                <Border Width="50"
-                    Height="50"
+                            <Button.CommandParameter>
+                                <MultiBinding Converter ="{StaticResource multiBindingConverter}">
+                                    <Binding Source="false"/>
+                                </MultiBinding>
+                            </Button.CommandParameter>
+                            <Image Source="{StaticResource closeTabDrawingImage}"/>
+                        </Button>
+                    </DockPanel>
+                    <Border Width="70"
+                    Height="70"
                     Name="userActiveBorder"
-                    Margin="5,0,0,0"
+                    Margin="5,5,0,0"
                     HorizontalAlignment="Center"
                         Padding="2"
                     Style="{StaticResource userIcon}">
-                    <Ellipse >
-                        <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding CurrentUser.UserProfile.Image, Converter={StaticResource byteToImageConverter}}"
+                        <Ellipse >
+                            <Ellipse.Fill>
+                                <ImageBrush ImageSource="{Binding CurrentUser.UserProfile.Image, Converter={StaticResource byteToImageConverter}}"
                                         Stretch="UniformToFill"/>
-                        </Ellipse.Fill>
-                    </Ellipse>
-                </Border>
-                <Button Style="{StaticResource changePhotoButton}"
+                            </Ellipse.Fill>
+                        </Ellipse>
+                    </Border>
+                    <Button Style="{StaticResource changePhotoButton}"
                         Command="{Binding ChangePhotoCommand}">
-                    <TextBlock Text="Change Photo"  
+                        <TextBlock Text="Change Photo"  
                        FontSize="20"
-                       Margin="5"/>
-                </Button>
-            </StackPanel>
-            <Border Background="#AAABB2" 
-                    Grid.Row="1">
-                <StackPanel Orientation="Vertical">
-                    <TextBlock Text="Username"
+                       Margin="6"/>
+                    </Button>
+                </StackPanel>
+            </Border>
+            <Border CornerRadius="0,0,5,5"
+                    BorderThickness="2,0,2,2"
+                    BorderBrush="Gray"
+                    Grid.Row="1" Padding="2,0,2,2">
+                <Border Background="#AAABB2">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="Username"
                                Style="{StaticResource settingsField}"/>
-                    <DockPanel >
-                        <TextBlock Text="{Binding CurrentUser.UserProfile.Username}"
+                        <DockPanel >
+                            <TextBlock Text="{Binding CurrentUser.UserProfile.Username}"
                                            Style="{StaticResource settingsInsideField}"/>
-                        <Button DockPanel.Dock="Right"
+                            <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"/>
-                    </DockPanel>
-                    <TextBlock Text="Email"
+                        </DockPanel>
+                        <TextBlock Text="Email"
                                Style="{StaticResource settingsField}"/>
-                    <DockPanel>
-                        <TextBlock Text="Custom email"
+                        <DockPanel>
+                            <TextBlock Text="Custom email"
                                    Style="{StaticResource settingsInsideField}"/>
-                        <Button DockPanel.Dock="Right"
+                            <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"/>
-                    </DockPanel>
-                   
-                    <DockPanel Margin="0,25,0,0">
-                        <TextBlock Text="Password"
+                        </DockPanel>
+
+                        <DockPanel Margin="0,25,0,0">
+                            <TextBlock Text="Password"
                                    Style="{StaticResource settingsField}"
                                    Margin="5"/>
-                        <Button DockPanel.Dock="Right"
+                            <Button DockPanel.Dock="Right"
                                 Style="{StaticResource changeFieldButton}"/>
-                    </DockPanel>
-                </StackPanel>
+                        </DockPanel>
+                    </StackPanel>
+                </Border>
             </Border>
         </Grid>
     </Grid>
