--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -11,11 +11,6 @@
         <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/MessageStatus.xaml"/>
         <ResourceDictionary Source="Menu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-    <!--<ResourceDictionary x:Key="iconsDictionary">
-        <ResourceDictionary.MergedDictionaries>
-            <ResourceDictionary x:Name="iconMute" Source="pack://application:,,,/ChatClient;component/Resources/Images/Mute.xaml"/>
-        </ResourceDictionary.MergedDictionaries>
-    </ResourceDictionary>-->
 
     <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
     <converters:MultiValueEqualityConverter x:Key="equalityConverter"/>
@@ -37,6 +32,16 @@
         <Setter Property="SelectedIndex" Value="0"/>
         <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <extensions:ScrollViewerExtension AlwaysScrollToEnd="True"
+                                                      Background="{StaticResource mainMessageBoxColors}">
+                        <ItemsPresenter/>
+                    </extensions:ScrollViewerExtension>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type ListBoxItem }">
@@ -91,7 +96,7 @@
                                                    Background="#F0F0FF"
                                                    TextTrimming="CharacterEllipsis"
                                                    Name="UsernameText"/>
-  
+
                                     </DockPanel>
                                     <Menu Style="{StaticResource userMenu}" 
                               Grid.Column="1"
@@ -203,11 +208,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <ScrollViewer extensions:ScrollViewerExtension.AlwaysScrollToEnd="True">
-                        <Grid Background="{StaticResource mainMessageBoxColors}">
-                            <ItemsPresenter/>
-                        </Grid>
-                    </ScrollViewer>
+                    <extensions:ScrollViewerExtension AlwaysScrollToEnd="True"
+                                                      Background="{StaticResource mainMessageBoxColors}">
+                        <ItemsPresenter/>
+                    </extensions:ScrollViewerExtension>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -268,8 +272,21 @@
     <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersListBox}">
         <Setter Property="ItemsSource" Value="{Binding CurrentChatGroup.Messages}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <Setter Property="BorderThickness" Value="0,1,0,1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <extensions:ScrollViewerExtension MessageCollection="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBox}}
+                            ,Path=ItemsSource, Mode=TwoWay, IsAsync=True}"
+                                                      AlwaysScrollToEnd="{Binding  Source=True, AsyncState=True}"
+                                                      Background="{StaticResource mainMessageBoxColors}">
+                        <ItemsPresenter/>
+                    </extensions:ScrollViewerExtension>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
